--- a/playbooks/roles/neutron/tasks/main.yml
+++ b/playbooks/roles/neutron/tasks/main.yml
@@ -34,8 +34,9 @@
 
 - template: src=ml2_conf.ini.j2 dest=/etc/neutron/plugins/ml2/ml2_conf.ini owner={{ user_name }} group={{ group_name}}
 
-- command: ln -s /etc/neutron/plugins/ml2/ml2_conf.ini /etc/neutron/plugin.ini
-  ignore_errors: True
+- file: src=/etc/neutron/plugins/ml2/ml2_conf.ini dest=/etc/neutron/plugin.ini state=link
+#- command: ln -s /etc/neutron/plugins/ml2/ml2_conf.ini /etc/neutron/plugin.ini
+#  ignore_errors: True
 
 
 - include: controller.yml
