--- a/playbooks/roles/neutron/tasks/network.yml
+++ b/playbooks/roles/neutron/tasks/network.yml
@@ -15,5 +15,8 @@
 
 - template: src=metadata_agent.ini.j2 dest=/etc/neutron/metadata_agent.ini owner={{ user_name }} group={{ group_name}}
 
+- file: src={{ virtualenv_dir }}/bin/neutron-ns-metadata-proxy dest=/usr/bin/neutron-ns-metadata-proxy state=link
+
+
 - shell: ovs-vsctl --may-exist add-br br-ex
 - shell: ovs-vsctl --may-exist add-port br-ex {{ ansible_local.dynamic.interfaces[2].name }}
